--- a/LabelGenerator/package.json
+++ b/LabelGenerator/package.json
@@ -10,7 +10,8 @@
     "debug": "~2.6.9",
     "express": "^4.21.2",
     "http-errors": "~1.6.3",
+    "husky": "^9.1.7",
     "morgan": "~1.9.1",
-    "pug": "^2.0.4"
+    "pug": "^3.0.3"
   }
 }
