--- a/LabelGenerator/package.json
+++ b/LabelGenerator/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dymojs": "^1.2.0",
     "express": "^4.21.2",
     "http-errors": "~1.6.3",
     "husky": "^9.1.7",
