--- a/LabelGenerator/package.json
+++ b/LabelGenerator/package.json
@@ -12,6 +12,8 @@
     "http-errors": "~1.6.3",
     "husky": "^9.1.7",
     "morgan": "~1.9.1",
-    "pug": "^3.0.3"
+    "node-fetch": "^3.3.2",
+    "pug": "^3.0.3",
+    "xml2js": "^0.6.2"
   }
 }
