--- a/LabelGenerator/package.json
+++ b/LabelGenerator/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
     "husky": "^9.1.7",
     "morgan": "~1.9.1",
